--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ border-bottom-left-radius: 50px;
       <img style="width: 70%;" src="spd.png" alt="Bild" class="mb-4">
       <h2 style="font-family: 'Roboto Slab', serif;" class="text-2xl font-bold mb-2 text-red">SPD-Generator</h2>
       <b><p style="font-family: 'Roboto Slab', serif;" class="mb-4">Intelligente Inhalte auf Knopfdruck!</p></b>
-      <p style="font-family: 'Roboto Slab', serif;" class="mb-4">Gelangweilt von sogenannten Fakten und diesen blöden Klimaklebern? Sind Sie einfach unzufrieden mit der Gesamtsituation? Egal ob noch Schwurbel-Einsteiger und oder schon alter Silberrücken dem nicht mehr einfällt was er seinen Enkeln eigentlich erzählen wollte, dieser Generator kann auch Ihnen die lästige und ohnehin überflüssige Recherche abnehmen.</p>
+      <p style="font-family: 'Roboto Slab', serif;" class="mb-4">Gelangweilt von oberflächlichen Behauptungen und den immer gleichen Parolen? Sind Sie frustriert über die aktuelle Situation? Egal, ob Sie sich erst gerade mit Politik beschäftigen oder schon ein erfahrener Bürger sind, der nach inspirierenden Geschichten für seine Enkelkinder sucht - dieser Generator kann Ihnen die zeitraubende Recherche abnehmen.</p>
       <em style="font-weight: bold; color: gray;font-family: 'Roboto Slab', serif;">Dann haben wir hier die Lösung für Sie.</em>
       <p style="font-family: 'Roboto Slab', serif;" class="mb-4">SPD: Jeder ist gleich, egal ob Muslim, Christ oder sonstige Religion. Wir beurteilen niemanden aufgrund seiner religiösen Kleidung und respektieren jeden.</p>
       <strong style="font-family: 'Roboto Slab', serif;">Durch die Nutzung dieser Seite gebe ich meine Zustimmung, meinen gesunden Menschenverstand einzusetzen und mein Gehirn aktiv zu nutzen.</strong><br>
